--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,9 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "dev": "vite --host 0.0.0.0",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
